[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathlib_next"
version = "0.7.0"
authors = [{ name = "Jose A" }]
description = "Generic Path Protocol based pathlib"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
[project.optional-dependencies]
uri = ["uritools"]
http = ["requests", "pathlib_next[uri]"]
sftp = ["paramiko", "pathlib_next[uri]"]
sftp-async = ["asyncssh<2.22; python_version<'3.10'", "asyncssh; python_version>='3.10'", "pathlib_next[uri]"]
s3 = ["boto3", "pathlib_next[uri]"]
dev = ['build', 'twine', 'hatchling', 'pytest', 'pytest-cov', 'pyftpdlib', 'wsgidav', 'cheroot', 'moto[s3]', 'hypothesis']
docs = ['mkdocs', 'mkdocs-material', 'mkdocstrings[python]']

[project.entry-points."pathlib_next.schemes"]
file = "pathlib_next.uri.schemes.file:FileUri"
data = "pathlib_next.uri.schemes.data:DataUri"
zip = "pathlib_next.uri.schemes.archive:ZipUri"
tar = "pathlib_next.uri.schemes.archive:TarUri"
archive = "pathlib_next.uri.schemes.archive:ArchiveUri"
"archive+zip" = "pathlib_next.uri.schemes.archive:ArchiveZipUri"
"archive+tar" = "pathlib_next.uri.schemes.archive:ArchiveTarUri"
ftp = "pathlib_next.uri.schemes.ftp:FtpPath"
http = "pathlib_next.uri.schemes.http:HttpPath"
https = "pathlib_next.uri.schemes.http:HttpPath"
dav = "pathlib_next.uri.schemes.dav:DavPath"
davs = "pathlib_next.uri.schemes.dav:DavPath"
sftp = "pathlib_next.uri.schemes.sftp:SftpPath"
s3 = "pathlib_next.uri.schemes.s3:S3Path"

[project.urls]
Homepage = "https://github.com/jose-pr/pathlib_next/"
Documentation = "https://jose-pr.github.io/pathlib_next/"
Issues = "https://github.com/jose-pr/pathlib_next/issues"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/benchmarks"]

[tool.hatch.build.targets.wheel]
packages = ["src/pathlib_next"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # boto3 emits PythonDeprecationWarning on Python 3.9 (EOL notice); not our bug.
    # It inherits from Warning directly, not DeprecationWarning.
    "ignore::boto3.exceptions.PythonDeprecationWarning",
    # ResourceWarnings from daemon-thread server sockets cleaned up by GC at
    # session teardown are expected; suppress to keep output readable.
    "ignore::ResourceWarning",
]
